syntax = "proto2";

package proto;


message PingRequest {
  required string value = 1;
}

message PingResponse {
  required string value = 1;
}

service TestService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}